--- a/views/sign-up-form.ejs
+++ b/views/sign-up-form.ejs
@@ -36,7 +36,7 @@
         document.getElementById('error-message').style.display = 'block';
       } else {
         // Handle successful sign up
-        window.location.href = '/welcome';
+        window.location.href = '/';
       }
     });
   </script>
